packages/rust/armonik-transport-ffi/include/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace ArmoniK.Api.Client.Native
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "armonik_transport_ffi";

        /// <summary>
        ///  The revision of this ABI that this library implements.
        ///
        ///  A caller compiles this value in and compares it against what `ak_abi_version` answers.
        /// </summary>
        public const int AK_ABI_VERSION = 1;




        /// <summary>
        ///  The revision of this ABI that the loaded library implements.
        ///
        ///  Queryable rather than only compiled in, because a host process loads one native module and every
        ///  add-in in it shares whichever was loaded first: an add-in that did not bring its own has to be
        ///  able to find out what it got. Asking turns a mismatch into a diagnosis, where reaching for an
        ///  entry point that is not there surfaces as an `EntryPointNotFoundException` from somewhere
        ///  unrelated.
        ///
        ///  Compare against `AK_ABI_VERSION`, the value this library was compiled with.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ak_abi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ak_abi_version();

        /// <summary>
        ///  Create a client from a UTF-8 JSON configuration document.
        ///
        ///  `config_json` names the flat options of the transport's vocabulary - `Endpoint`, `CaCert`,
        ///  `AllowUnsafeConnection`, `Tcp*`, `Http2*`, `Proxy*`, and the rest - as a single JSON object of
        ///  strings. `include/http_config.schema.json` is that vocabulary in full; an option the document
        ///  does not name reads as its own default, so a caller writes only what it changes.
        ///
        ///  Synchronous, and it opens no connection: this reads the options, loads whatever certificates they
        ///  name, and assembles the connector. A failure here is therefore a configuration failure, reported
        ///  straight away with its whole cause chain flattened into `out_err`.
        ///
        ///  Safety:
        ///
        ///  `config_json` must point to `len` readable bytes. `out` must be a writable `ak_client*`, and
        ///  receives a handle to be given up by exactly one `ak_client_release`. `out_err`, when non-null,
        ///  must be a writable `ak_bytes` and receives a message to give up with
        ///  `ak_bytes_release`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ak_client_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ak_client_create(byte* config_json, System.UIntPtr len, ak_client** @out, ak_bytes* out_err);

        /// <summary>
        ///  Give up the caller's reference to a client.
        ///
        ///  Requests already under way keep the pool alive and run to completion: this gives back one
        ///  reference, not necessarily the last one. Null is accepted and does nothing.
        ///
        ///  Safety:
        ///
        ///  `client` must be a handle from `ak_client_create` that has not been released, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ak_client_release", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void ak_client_release(ak_client* client);

        /// <summary>
        ///  Give up an `ak_bytes` previously returned by this library.
        ///
        ///  Safety:
        ///
        ///  `bytes` must be a value this library returned, not yet released. Passing a borrowed input buffer, a
        ///  value already released, or a value with an `owner` this library did not produce, is undefined
        ///  behaviour. The zeroed value is always safe to pass here.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ak_bytes_release", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void ak_bytes_release(ak_bytes bytes);


    }

    /// <summary>
    ///  A connection pool, and the options every request on it inherits.
    ///
    ///  Handed to the caller as an opaque pointer. The registry owns it, and a request takes a counted
    ///  reference for as long as it runs, so a pool outlives an `ak_client_release` that lands while
    ///  work is still on it.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct ak_client
    {
    }

    /// <summary>
    ///  An owned buffer handed to the caller.
    ///
    ///  `ptr`/`len` are a read-only *view*; the allocation itself belongs to `owner`, an opaque handle
    ///  the caller passes back unchanged and never otherwise touches. Keeping the two apart - rather than
    ///  treating `ptr` as the thing to release - is what lets a buffer this library already holds cross
    ///  without being copied: `owner` names whatever really owns those bytes, which may be a
    ///  reference-counted view into a larger allocation, so `ptr` on its own is not something that can be
    ///  released.
    ///
    ///  Every buffer with a non-null `owner` must be given up by exactly one call to
    ///  `ak_bytes_release`. The zeroed value (`ptr` and `owner` null, `len` 0) means "no data" and is
    ///  always safe to pass there.
    ///
    ///  Input buffers travel as `ak_bytes_in` instead: those are borrowed from the caller and are never
    ///  released by this library. Only a value this library produced is ever released here.
    ///
    ///  Copying the `(ptr, len, owner)` triple is harmless, which is why this is a plain value. What must
    ///  never happen, on either side, is passing more than one copy of the same original value to
    ///  `ak_bytes_release`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct ak_bytes
    {
        /// <summary>
        ///  Pointer to the first byte, or null for an empty or absent buffer. Readable until this value
        ///  is passed to `ak_bytes_release`; never write through it.
        /// </summary>
        public byte* ptr;
        /// <summary>
        ///  Number of bytes at `ptr`.
        /// </summary>
        public System.UIntPtr len;
        /// <summary>
        ///  Opaque; pass back to `ak_bytes_release` unchanged, never dereference or otherwise inspect
        ///  it.
        /// </summary>
        public void* owner;
    }

    /// <summary>
    ///  A borrowed input buffer: a view into memory the *caller* owns.
    ///
    ///  Also what an event payload travels as, in the other direction: borrowed for the duration of the
    ///  invocation and invalid the moment it returns. Never released by whoever received it. A null `ptr`
    ///  or a zero `len` means "empty" or "absent".
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct ak_bytes_in
    {
        /// <summary>
        ///  Pointer to the first byte, or null for an empty or absent buffer.
        /// </summary>
        public byte* ptr;
        /// <summary>
        ///  Number of bytes at `ptr`.
        /// </summary>
        public System.UIntPtr len;
    }


    /// <summary>
    ///  The result of a call: `AK_OK` on success, and a negative code otherwise.
    /// </summary>
    public enum ak_status : int
    {
        /// <summary>
        ///  The operation succeeded.
        /// </summary>
        AK_OK = 0,
        /// <summary>
        ///  A pointer argument that must not be null was null.
        /// </summary>
        AK_NULL_ARGUMENT = -1,
        /// <summary>
        ///  A byte buffer was not valid UTF-8 where UTF-8 was required.
        /// </summary>
        AK_INVALID_UTF8 = -2,
        /// <summary>
        ///  The client configuration was rejected; the message says what in it.
        /// </summary>
        AK_INVALID_CONFIG = -3,
        /// <summary>
        ///  The request never reached the server: no connection at all, or a connection that failed
        ///  before any response header arrived.
        /// </summary>
        AK_CONNECTION_FAILED = -4,
        /// <summary>
        ///  The handle passed to a call has already been released, or was never valid.
        /// </summary>
        AK_INVALID_HANDLE = -5,
        /// <summary>
        ///  The object is not in a state that allows the operation.
        /// </summary>
        AK_INVALID_STATE = -6,
        /// <summary>
        ///  Something inside this library failed in a way that is not the caller's doing; see the message.
        /// </summary>
        AK_INTERNAL = -8,
        /// <summary>
        ///  A panic was caught at the boundary. This is always a bug in this library; the message carries
        ///  whatever the panic payload could be turned into.
        /// </summary>
        AK_INTERNAL_PANIC = -9,
        /// <summary>
        ///  The request was cancelled.
        /// </summary>
        AK_CANCELLED = -10,
        /// <summary>
        ///  The configured timeout elapsed while the request was still in flight.
        /// </summary>
        AK_TIMEOUT = -11,
        /// <summary>
        ///  The connection failed after the response headers had arrived: a reset stream, a broken
        ///  connection, a protocol error.
        /// </summary>
        AK_TRANSPORT = -12,
    }


}
